# leds-tools-public

./: .cz.toml  .gitignore  .gitlab-ci.yml  README.md  SparkArchichecture.asta  docusaurus.config.js  docusaurus.config.ts  estrutura-frontend.txt  package-lock.json  package.json  sidebars.ts
.github/: CODEOWNERS
.github/workflows/: sync-to-gitlab.yml
docs/: intro.md
docs/andes/: 10_Management_Metrics.md  11_pmc.md  12_faq.md  3_installation.md  4_architecture.md  5_lang.md  6_howtouse.md  6_metamodel.md  7_Communication_Plan.md  7_faq.md  7_howtouse.md  8_Communication_Plan.md  8_Team_Topology.md  9_Team_Topology.md  9_pmc.md
docs/bb8/: how-to-use.md  intro.md
docs/bestpractices/: 1_knowledge_management.md  2_bitwarden copy.md  3_bitwarden.md  3_bitwardenEN.md  _category_.json
docs/code_wise/: 03_codewise_project_managment_team.md  2_project_managment.md  code_wise.md  codewisePR.md  requeriments.txt
docs/code_wise/codewise/: .gitignore  README.md  pyproject.toml  report.md
docs/code_wise/codewise/DTO/: RequestObserverDTO.py  ResponseObserverDTO.py
docs/code_wise/codewise/Observer/: Observer.py
docs/code_wise/codewise/input/: GetJson.py
docs/code_wise/codewise/src/codewise/: crew.py  main.py
docs/code_wise/codewise/src/codewise/config/: agents.yaml  tasks.yaml
docs/code_wise_extension/: 1_overview.md  2_project_managment.md  3_installation.md  4_howtouse.md  _category_.json  code_wise.md
docs/concepts/: 3_scrum_event.md  4_okr.md  _category_.json
docs/inspirations/: 1_student-centered-education.md  2_pbl.md  3_manifestoagil.md  4_hcd.md  (+4 more)
(+355 files in other folders)
